expr_parser.output
Terminals unused in grammar

   TK_Error
   TK_EOF
   TK_ERROR
   TK_Dolar
   TK_Separador


State 19 conflicts: 1 reduce/reduce
State 92 conflicts: 2 shift/reduce
State 93 conflicts: 3 shift/reduce
State 94 conflicts: 7 shift/reduce
State 95 conflicts: 2 shift/reduce
State 96 conflicts: 2 shift/reduce
State 97 conflicts: 3 shift/reduce
State 108 conflicts: 1 shift/reduce
State 117 conflicts: 1 reduce/reduce
State 129 conflicts: 1 shift/reduce
State 223 conflicts: 3 shift/reduce
State 224 conflicts: 6 shift/reduce
State 225 conflicts: 3 shift/reduce
State 226 conflicts: 6 shift/reduce
State 227 conflicts: 6 shift/reduce
State 228 conflicts: 6 shift/reduce
State 229 conflicts: 2 shift/reduce
State 230 conflicts: 2 shift/reduce
State 231 conflicts: 2 shift/reduce
State 232 conflicts: 2 shift/reduce
State 233 conflicts: 2 shift/reduce
State 234 conflicts: 2 shift/reduce
State 236 conflicts: 2 shift/reduce
State 237 conflicts: 2 shift/reduce
State 238 conflicts: 3 shift/reduce
State 239 conflicts: 3 shift/reduce
State 281 conflicts: 1 shift/reduce
State 340 conflicts: 1 reduce/reduce
State 367 conflicts: 1 reduce/reduce


Grammar

    0 $accept: inputs $end

    1 inputs: opt_eols inputStatement opt_eols

    2 statementList: statementList opt_eols statement
    3              | statement

    4 declarationList: declarationList opt_eols declaration_statement TK_PuntoComma
    5                | declaration_statement TK_PuntoComma

    6 inputStatement: declarationList opt_eols statementList
    7               | statementList

    8 statement: if_statement
    9          | while_statement
   10          | print_statement TK_PuntoComma
   11          | scanf_statement TK_PuntoComma
   12          | assign_statement TK_PuntoComma
   13          | producce_statement
   14          | for_statement
   15          | doWhile_statement TK_PuntoComma
   16          | funcion_statement
   17          | callFuncion_statement TK_PuntoComma
   18          | incremente_statement TK_PuntoComma

   19 incremente_statement: TK_Incremento TK_VarNombre TK_left_corchete expr TK_rigth_corchete
   20                     | TK_Decremento TK_VarNombre TK_left_corchete expr TK_rigth_corchete
   21                     | TK_VarNombre TK_left_corchete expr TK_rigth_corchete TK_Decremento
   22                     | TK_VarNombre TK_left_corchete expr TK_rigth_corchete TK_Incremento
   23                     | TK_VarNombre TK_Decremento
   24                     | TK_VarNombre TK_Incremento
   25                     | TK_Decremento TK_VarNombre
   26                     | TK_Incremento TK_VarNombre

   27 callFuncion_statement: TK_VarNombre TK_left_par optionalParameter TK_rigth_par

   28 optionalParameter: arg_list
   29                  | %empty

   30 declaration_statement: Type TK_VarNombre TK_left_corchete expr TK_rigth_corchete optionalAssign multideclarationImput
   31                      | Type TK_Op_mul TK_VarNombre optionalAssign multideclarationImput
   32                      | Type TK_VarNombre optionalAssign multideclarationImput

   33 multideclarationImput: TK_Comma multiDeclaration
   34                      | %empty

   35 multiDeclaration: multiDeclaration TK_Comma uniMultideclaration
   36                 | uniMultideclaration

   37 uniMultideclaration: TK_VarNombre TK_left_corchete expr TK_rigth_corchete optionalAssign
   38                    | TK_Op_mul TK_VarNombre optionalAssign
   39                    | TK_VarNombre optionalAssign

   40 funcion_statement: Type TK_VarNombre TK_left_par optparametroList TK_rigth_par opt_eols optionalBlock
   41                  | Type TK_Op_mul TK_VarNombre TK_left_par optparametroList TK_rigth_par opt_eols optionalBlock

   42 producce_statement: TK_Void TK_VarNombre TK_left_par optparametroList TK_rigth_par opt_eols optionalBlock

   43 optparametroList: parametroList
   44                 | %empty

   45 parametroList: parametroList TK_Comma parametro
   46              | parametro

   47 parametro: Type TK_VarNombre
   48          | Type TK_Op_mul TK_VarNombre
   49          | Type TK_VarNombre TK_left_corchete optionalExpr TK_rigth_corchete

   50 optionalExpr: expr
   51             | %empty

   52 optionalBlock: BlockStatementFuncion
   53              | TK_PuntoComma

   54 BlockStatementFuncion: TK_left_llave opt_eols inputStatementFuncion opt_eols TK_rigth_llave

   55 inputStatementFuncion: declarationList opt_eols statementListFuncion
   56                      | statementListFuncion

   57 statementListFuncion: statementListFuncion opt_eols statementFuncion
   58                     | statementFuncion

   59 statementFuncion: if_statement
   60                 | while_statement
   61                 | print_statement TK_PuntoComma
   62                 | scanf_statement TK_PuntoComma
   63                 | assign_statement TK_PuntoComma
   64                 | for_statement
   65                 | doWhile_statement TK_PuntoComma
   66                 | callFuncion_statement TK_PuntoComma
   67                 | return_statement TK_PuntoComma

   68 return_statement: TK_Return expr

   69 optionalAssign: TK_Asignacion expr
   70               | TK_Asignacion TK_String
   71               | TK_Asignacion TK_left_llave arg_list TK_rigth_llave
   72               | %empty

   73 Type: TK_Int
   74     | TK_Char

   75 for_statement: TK_For TK_left_par opt_eols for_assign opt_eols TK_PuntoComma opt_eols expr opt_eols TK_PuntoComma opt_eols expr opt_eols TK_rigth_par opt_eols BlockStatementOrStatement

   76 for_assign: assign_statement
   77           | %empty

   78 if_statement: TK_IF TK_left_par expr TK_rigth_par eols BlockStatementOrStatement TK_EOL TK_Else TK_EOL BlockStatementOrStatement
   79             | TK_IF TK_left_par expr TK_rigth_par eols BlockStatementOrStatement

   80 while_statement: TK_While TK_left_par expr TK_rigth_par opt_eols BlockStatementOrStatement

   81 doWhile_statement: TK_Do opt_eols BlockStatementOrStatement opt_eols TK_While TK_left_par expr TK_rigth_par

   82 BlockStatementOrStatement: statement
   83                          | TK_left_llave opt_eols statementList opt_eols TK_rigth_llave

   84 print_statement: TK_Print TK_left_par TK_String TK_Comma arg_list TK_rigth_par
   85                | TK_Print TK_left_par TK_String TK_rigth_par

   86 scanf_statement: TK_Scanf TK_left_par TK_String TK_Comma arg_list TK_rigth_par
   87                | TK_Scanf TK_left_par TK_String TK_rigth_par

   88 arg_list: arg_list TK_Comma expr
   89         | expr

   90 assign_statement: TK_VarNombre opAssignStatement expr
   91                 | TK_VarNombre TK_left_corchete expr TK_rigth_corchete opAssignStatement expr
   92                 | TK_Refenciacion TK_VarNombre opAssignStatement expr
   93                 | TK_Op_mul TK_VarNombre incrementopt opAssignStatement expr

   94 incrementopt: TK_Incremento
   95             | TK_Decremento
   96             | %empty

   97 opAssignStatement: TK_Asignacion
   98                  | TK_AutoAdd
   99                  | TK_AutoSub
  100                  | TK_AutoMul
  101                  | TK_AutoDiv
  102                  | TK_AutoMod
  103                  | TK_AsigOrBit
  104                  | TK_AsigAndBit
  105                  | TK_AsigXorBit
  106                  | TK_AsigCorIzq
  107                  | TK_AsigCorDer

  108 eols: eols TK_EOL
  109     | TK_EOL

  110 opt_eols: opt_eols TK_EOL
  111         | %empty

  112 ternario: conditional TK_Interogaccion expr TK_DosPuntos expr
  113         | andOr

  114 assignExpr: TK_VarNombre opAssign expr
  115           | TK_VarNombre TK_left_corchete expr TK_rigth_corchete opAssign expr
  116           | TK_Refenciacion TK_VarNombre opAssign expr
  117           | TK_Op_mul TK_VarNombre opAssign expr

  118 opAssign: TK_Asignacion
  119         | TK_AutoAdd
  120         | TK_AutoSub
  121         | TK_AutoMul
  122         | TK_AutoDiv
  123         | TK_AutoMod
  124         | TK_AsigOrBit
  125         | TK_AsigAndBit
  126         | TK_AsigXorBit
  127         | TK_AsigCorIzq
  128         | TK_AsigCorDer

  129 expr: assignExpr
  130     | ternario

  131 andOr: andOr TK_And exprForBit
  132      | andOr TK_Or exprForBit
  133      | exprForBit

  134 exprForBit: exprForBit TK_OPorBit conditional
  135           | exprForBit TK_ExclPorBit conditional
  136           | exprForBit TK_Refenciacion conditional
  137           | conditional

  138 conditional: conditional TK_Igual corrimiento
  139            | conditional TK_Distinto corrimiento
  140            | conditional TK_Menor corrimiento
  141            | conditional TK_Mayor corrimiento
  142            | conditional TK_MenorIgual corrimiento
  143            | conditional TK_MayorIgual corrimiento
  144            | corrimiento

  145 corrimiento: corrimiento TK_CorrimientoIzq add
  146            | corrimiento TK_CorrimientoDer add
  147            | add

  148 add: add TK_Op_add term
  149    | add TK_Op_sub term
  150    | term

  151 term: term TK_Op_mul unary
  152     | term TK_Op_div unary
  153     | term TK_Modulo unary
  154     | unary

  155 unary: TK_Negarcion expr
  156      | TK_Complemento expr
  157      | TK_Op_mul TK_VarNombre
  158      | TK_Op_mul TK_left_par TK_VarNombre TK_rigth_par
  159      | TK_Refenciacion TK_VarNombre
  160      | TK_Refenciacion TK_left_par TK_VarNombre TK_rigth_par
  161      | TK_Incremento TK_VarNombre
  162      | TK_Incremento TK_left_par TK_VarNombre TK_rigth_par
  163      | TK_Decremento TK_VarNombre
  164      | TK_Decremento TK_left_par TK_VarNombre TK_rigth_par
  165      | TK_VarNombre TK_Incremento
  166      | TK_left_par TK_VarNombre TK_rigth_par TK_Incremento
  167      | TK_VarNombre TK_Decremento
  168      | TK_left_par TK_VarNombre TK_rigth_par TK_Decremento
  169      | factor

  170 factor: TK_VarNombre
  171       | TK_VarNombre TK_left_par optionalParameter TK_rigth_par
  172       | TK_NUMERO
  173       | TK_CharLit
  174       | TK_VarNombre TK_left_corchete expr TK_rigth_corchete
  175       | TK_left_par expr TK_rigth_par


Terminals, with rules where they appear

$end (0) 0
error (256)
TK_Op_add (258) 148
TK_Op_sub (259) 149
TK_Op_mul (260) 31 38 41 48 93 117 151 157 158
TK_Op_div (261) 152
TK_left_par (262) 27 40 41 42 75 78 79 80 81 84 85 86 87 158 160 162
    164 166 168 171 175
TK_rigth_par (263) 27 40 41 42 75 78 79 80 81 84 85 86 87 158 160 162
    164 166 168 171 175
TK_EOL (264) 78 108 109 110
TK_Error (265)
TK_EOF (266)
TK_ERROR (267)
TK_Asignacion (268) 69 70 71 97 118
TK_Dolar (269)
TK_NUMERO (270) 172
TK_Print (271) 84 85
TK_Separador (272)
TK_Igual (273) 138
TK_Distinto (274) 139
TK_Menor (275) 140
TK_Mayor (276) 141
TK_MenorIgual (277) 142
TK_MayorIgual (278) 143
TK_IF (279) 78 79
TK_Else (280) 78
TK_left_llave (281) 54 71 83
TK_rigth_llave (282) 54 71 83
TK_VarNombre (283) 19 20 21 22 23 24 25 26 27 30 31 32 37 38 39 40
    41 42 47 48 49 90 91 92 93 114 115 116 117 157 158 159 160 161
    162 163 164 165 166 167 168 170 171 174
TK_While (284) 80 81
TK_left_corchete (285) 19 20 21 22 30 37 49 91 115 174
TK_rigth_corchete (286) 19 20 21 22 30 37 49 91 115 174
TK_Refenciacion (287) 92 116 136 159 160
TK_PuntoComma (288) 4 5 10 11 12 15 17 18 53 61 62 63 65 66 67 75
TK_Char (289) 74
TK_Int (290) 73
TK_Void (291) 42
TK_For (292) 75
TK_Scanf (293) 86 87
TK_String (294) 70 84 85 86 87
TK_CharLit (295) 173
TK_Modulo (296) 153
TK_Comma (297) 33 35 45 84 86 88
TK_AutoAdd (298) 98 119
TK_AutoSub (299) 99 120
TK_AutoMul (300) 100 121
TK_AutoDiv (301) 101 122
TK_AsigOrBit (302) 103 124
TK_AsigCorIzq (303) 106 127
TK_AsigCorDer (304) 107 128
TK_Incremento (305) 19 22 24 26 94 161 162 165 166
TK_Decremento (306) 20 21 23 25 95 163 164 167 168
TK_CorrimientoIzq (307) 145
TK_CorrimientoDer (308) 146
TK_ExclPorBit (309) 135
TK_And (310) 131
TK_Or (311) 132
TK_OPorBit (312) 134
TK_Interogaccion (313) 112
TK_Negarcion (314) 155
TK_Complemento (315) 156
TK_DosPuntos (316) 112
TK_AsigAndBit (317) 104 125
TK_AsigXorBit (318) 105 126
TK_AutoMod (319) 102 123
TK_Do (320) 81
TK_Return (321) 68


Nonterminals, with rules where they appear

$accept (67)
    on left: 0
inputs (68)
    on left: 1, on right: 0
statementList (69)
    on left: 2 3, on right: 2 6 7 83
declarationList (70)
    on left: 4 5, on right: 4 6 55
inputStatement (71)
    on left: 6 7, on right: 1
statement (72)
    on left: 8 9 10 11 12 13 14 15 16 17 18, on right: 2 3 82
incremente_statement (73)
    on left: 19 20 21 22 23 24 25 26, on right: 18
callFuncion_statement (74)
    on left: 27, on right: 17 66
optionalParameter (75)
    on left: 28 29, on right: 27 171
declaration_statement (76)
    on left: 30 31 32, on right: 4 5
multideclarationImput (77)
    on left: 33 34, on right: 30 31 32
multiDeclaration (78)
    on left: 35 36, on right: 33 35
uniMultideclaration (79)
    on left: 37 38 39, on right: 35 36
funcion_statement (80)
    on left: 40 41, on right: 16
producce_statement (81)
    on left: 42, on right: 13
optparametroList (82)
    on left: 43 44, on right: 40 41 42
parametroList (83)
    on left: 45 46, on right: 43 45
parametro (84)
    on left: 47 48 49, on right: 45 46
optionalExpr (85)
    on left: 50 51, on right: 49
optionalBlock (86)
    on left: 52 53, on right: 40 41 42
BlockStatementFuncion (87)
    on left: 54, on right: 52
inputStatementFuncion (88)
    on left: 55 56, on right: 54
statementListFuncion (89)
    on left: 57 58, on right: 55 56 57
statementFuncion (90)
    on left: 59 60 61 62 63 64 65 66 67, on right: 57 58
return_statement (91)
    on left: 68, on right: 67
optionalAssign (92)
    on left: 69 70 71 72, on right: 30 31 32 37 38 39
Type (93)
    on left: 73 74, on right: 30 31 32 40 41 47 48 49
for_statement (94)
    on left: 75, on right: 14 64
for_assign (95)
    on left: 76 77, on right: 75
if_statement (96)
    on left: 78 79, on right: 8 59
while_statement (97)
    on left: 80, on right: 9 60
doWhile_statement (98)
    on left: 81, on right: 15 65
BlockStatementOrStatement (99)
    on left: 82 83, on right: 75 78 79 80 81
print_statement (100)
    on left: 84 85, on right: 10 61
scanf_statement (101)
    on left: 86 87, on right: 11 62
arg_list (102)
    on left: 88 89, on right: 28 71 84 86 88
assign_statement (103)
    on left: 90 91 92 93, on right: 12 63 76
incrementopt (104)
    on left: 94 95 96, on right: 93
opAssignStatement (105)
    on left: 97 98 99 100 101 102 103 104 105 106 107, on right: 90
    91 92 93
eols (106)
    on left: 108 109, on right: 78 79 108
opt_eols (107)
    on left: 110 111, on right: 1 2 4 6 40 41 42 54 55 57 75 80 81
    83 110
ternario (108)
    on left: 112 113, on right: 130
assignExpr (109)
    on left: 114 115 116 117, on right: 129
opAssign (110)
    on left: 118 119 120 121 122 123 124 125 126 127 128, on right:
    114 115 116 117
expr (111)
    on left: 129 130, on right: 19 20 21 22 30 37 50 68 69 75 78 79
    80 81 88 89 90 91 92 93 112 114 115 116 117 155 156 174 175
andOr (112)
    on left: 131 132 133, on right: 113 131 132
exprForBit (113)
    on left: 134 135 136 137, on right: 131 132 133 134 135 136
conditional (114)
    on left: 138 139 140 141 142 143 144, on right: 112 134 135 136
    137 138 139 140 141 142 143
corrimiento (115)
    on left: 145 146 147, on right: 138 139 140 141 142 143 144 145
    146
add (116)
    on left: 148 149 150, on right: 145 146 147 148 149
term (117)
    on left: 151 152 153 154, on right: 148 149 150 151 152 153
unary (118)
    on left: 155 156 157 158 159 160 161 162 163 164 165 166 167 168
    169, on right: 151 152 153 154
factor (119)
    on left: 170 171 172 173 174 175, on right: 169


State 0

    0 $accept: . inputs $end
    1 inputs: . opt_eols inputStatement opt_eols
  110 opt_eols: . opt_eols TK_EOL
  111         | . %empty

    $default  reduce using rule 111 (opt_eols)

    inputs    go to state 1
    opt_eols  go to state 2


State 1

    0 $accept: inputs . $end

    $end  shift, and go to state 3


State 2

    1 inputs: opt_eols . inputStatement opt_eols
    2 statementList: . statementList opt_eols statement
    3              | . statement
    4 declarationList: . declarationList opt_eols declaration_statement TK_PuntoComma
    5                | . declaration_statement TK_PuntoComma
    6 inputStatement: . declarationList opt_eols statementList
    7               | . statementList
    8 statement: . if_statement
    9          | . while_statement
   10          | . print_statement TK_PuntoComma
   11          | . scanf_statement TK_PuntoComma
   12          | . assign_statement TK_PuntoComma
   13          | . producce_statement
   14          | . for_statement
   15          | . doWhile_statement TK_PuntoComma
   16          | . funcion_statement
   17          | . callFuncion_statement TK_PuntoComma
   18          | . incremente_statement TK_PuntoComma
   19 incremente_statement: . TK_Incremento TK_VarNombre TK_left_corchete expr TK_rigth_corchete
   20                     | . TK_Decremento TK_VarNombre TK_left_corchete expr TK_rigth_corchete
   21                     | . TK_VarNombre TK_left_corchete expr TK_rigth_corchete TK_Decremento
   22                     | . TK_VarNombre TK_left_corchete expr TK_rigth_corchete TK_Incremento
   23                     | . TK_VarNombre TK_Decremento
   24                     | . TK_VarNombre TK_Incremento
   25                     | . TK_Decremento TK_VarNombre
   26                     | . TK_Incremento TK_VarNombre
   27 callFuncion_statement: . TK_VarNombre TK_left_par optionalParameter TK_rigth_par
   30 declaration_statement: . Type TK_VarNombre TK_left_corchete expr TK_rigth_corchete optionalAssign multideclarationImput
   31                      | . Type TK_Op_mul TK_VarNombre optionalAssign multideclarationImput
   32                      | . Type TK_VarNombre optionalAssign multideclarationImput
   40 funcion_statement: . Type TK_VarNombre TK_left_par optparametroList TK_rigth_par opt_eols optionalBlock
   41                  | . Type TK_Op_mul TK_VarNombre TK_left_par optparametroList TK_rigth_par opt_eols optionalBlock
   42 producce_statement: . TK_Void TK_VarNombre TK_left_par optparametroList TK_rigth_par opt_eols optionalBlock
   73 Type: . TK_Int
   74     | . TK_Char
   75 for_statement: . TK_For TK_left_par opt_eols for_assign opt_eols TK_PuntoComma opt_eols expr opt_eols TK_PuntoComma opt_eols expr opt_eols TK_rigth_par opt_eols BlockStatementOrStatement
   78 if_statement: . TK_IF TK_left_par expr TK_rigth_par eols BlockStatementOrStatement TK_EOL TK_Else TK_EOL BlockStatementOrStatement
   79             | . TK_IF TK_left_par expr TK_rigth_par eols BlockStatementOrStatement
   80 while_statement: . TK_While TK_left_par expr TK_rigth_par opt_eols BlockStatementOrStatement
   81 doWhile_statement: . TK_Do opt_eols BlockStatementOrStatement opt_eols TK_While TK_left_par expr TK_rigth_par
   84 print_statement: . TK_Print TK_left_par TK_String TK_Comma arg_list TK_rigth_par
   85                | . TK_Print TK_left_par TK_String TK_rigth_par
   86 scanf_statement: . TK_Scanf TK_left_par TK_String TK_Comma arg_list TK_rigth_par
   87                | . TK_Scanf TK_left_par TK_String TK_rigth_par
   90 assign_statement: . TK_VarNombre opAssignStatement expr
   91                 | . TK_VarNombre TK_left_corchete expr TK_rigth_corchete opAssignStatement expr
   92                 | . TK_Refenciacion TK_VarNombre opAssignStatement expr
   93                 | . TK_Op_mul TK_VarNombre incrementopt opAssignStatement expr
  110 opt_eols: opt_eols . TK_EOL

    TK_Op_mul        shift, and go to state 4
    TK_EOL           shift, and go to state 5
    TK_Print         shift, and go to state 6
    TK_IF            shift, and go to state 7
    TK_VarNombre     shift, and go to state 8
    TK_While         shift, and go to state 9
    TK_Refenciacion  shift, and go to state 10
    TK_Char          shift, and go to state 11
    TK_Int           shift, and go to state 12
    TK_Void          shift, and go to state 13
    TK_For           shift, and go to state 14
    TK_Scanf         shift, and go to state 15
    TK_Incremento    shift, and go to state 16
    TK_Decremento    shift, and go to state 17
    TK_Do            shift, and go to state 18

    statementList          go to state 19
    declarationList        go to state 20
    inputStatement         go to state 21
    statement              go to state 22
    incremente_statement   go to state 23
    callFuncion_statement  go to state 24
    declaration_statement  go to state 25
    funcion_statement      go to state 26
    producce_statement     go to state 27
    Type                   go to state 28
    for_statement          go to state 29
    if_statement           go to state 30
    while_statement        go to state 31
    doWhile_statement      go to state 32
    print_statement        go to state 33
    scanf_statement        go to state 34
    assign_statement       go to state 35


State 3

    0 $accept: inputs $end .

    $default  accept


State 4

   93 assign_statement: TK_Op_mul . TK_VarNombre incrementopt opAssignStatement expr

    TK_VarNombre  shift, and go to state 36


State 5

  110 opt_eols: opt_eols TK_EOL .

    $default  reduce using rule 110 (opt_eols)


State 6

   84 print_statement: TK_Print . TK_left_par TK_String TK_Comma arg_list TK_rigth_par
   85                | TK_Print . TK_left_par TK_String TK_rigth_par

    TK_left_par  shift, and go to state 37


State 7

   78 if_statement: TK_IF . TK_left_par expr TK_rigth_par eols BlockStatementOrStatement TK_EOL TK_Else TK_EOL BlockStatementOrStatement
   79             | TK_IF . TK_left_par expr TK_rigth_par eols BlockStatementOrStatement

    TK_left_par  shift, and go to state 38


State 8

   21 incremente_statement: TK_VarNombre . TK_left_corchete expr TK_rigth_corchete TK_Decremento
   22                     | TK_VarNombre . TK_left_corchete expr TK_rigth_corchete TK_Incremento
   23                     | TK_VarNombre . TK_Decremento
   24                     | TK_VarNombre . TK_Incremento
   27 callFuncion_statement: TK_VarNombre . TK_left_par optionalParameter TK_rigth_par
   90 assign_statement: TK_VarNombre . opAssignStatement expr
   91                 | TK_VarNombre . TK_left_corchete expr TK_rigth_corchete opAssignStatement expr
   97 opAssignStatement: . TK_Asignacion
   98                  | . TK_AutoAdd
   99                  | . TK_AutoSub
  100                  | . TK_AutoMul
  101                  | . TK_AutoDiv
  102                  | . TK_AutoMod
  103                  | . TK_AsigOrBit
  104                  | . TK_AsigAndBit
  105                  | . TK_AsigXorBit
  106                  | . TK_AsigCorIzq
  107                  | . TK_AsigCorDer

    TK_left_par       shift, and go to state 39
    TK_Asignacion     shift, and go to state 40
    TK_left_corchete  shift, and go to state 41
    TK_AutoAdd        shift, and go to state 42
    TK_AutoSub        shift, and go to state 43
    TK_AutoMul        shift, and go to state 44
    TK_AutoDiv        shift, and go to state 45
    TK_AsigOrBit      shift, and go to state 46
    TK_AsigCorIzq     shift, and go to state 47
    TK_AsigCorDer     shift, and go to state 48
    TK_Incremento     shift, and go to state 49
    TK_Decremento     shift, and go to state 50
    TK_AsigAndBit     shift, and go to state 51
    TK_AsigXorBit     shift, and go to state 52
    TK_AutoMod        shift, and go to state 53

    opAssignStatement  go to state 54


State 9

   80 while_statement: TK_While . TK_left_par expr TK_rigth_par opt_eols BlockStatementOrStatement

    TK_left_par  shift, and go to state 55


State 10

   92 assign_statement: TK_Refenciacion . TK_VarNombre opAssignStatement expr

    TK_VarNombre  shift, and go to state 56


State 11

   74 Type: TK_Char .

    $default  reduce using rule 74 (Type)


State 12

   73 Type: TK_Int .

    $default  reduce using rule 73 (Type)


State 13

   42 producce_statement: TK_Void . TK_VarNombre TK_left_par optparametroList TK_rigth_par opt_eols optionalBlock

    TK_VarNombre  shift, and go to state 57


State 14

   75 for_statement: TK_For . TK_left_par opt_eols for_assign opt_eols TK_PuntoComma opt_eols expr opt_eols TK_PuntoComma opt_eols expr opt_eols TK_rigth_par opt_eols BlockStatementOrStatement

    TK_left_par  shift, and go to state 58


State 15

   86 scanf_statement: TK_Scanf . TK_left_par TK_String TK_Comma arg_list TK_rigth_par
   87                | TK_Scanf . TK_left_par TK_String TK_rigth_par

    TK_left_par  shift, and go to state 59


State 16

   19 incremente_statement: TK_Incremento . TK_VarNombre TK_left_corchete expr TK_rigth_corchete
   26                     | TK_Incremento . TK_VarNombre

    TK_VarNombre  shift, and go to state 60


State 17

   20 incremente_statement: TK_Decremento . TK_VarNombre TK_left_corchete expr TK_rigth_corchete
   25                     | TK_Decremento . TK_VarNombre

    TK_VarNombre  shift, and go to state 61


State 18

   81 doWhile_statement: TK_Do . opt_eols BlockStatementOrStatement opt_eols TK_While TK_left_par expr TK_rigth_par
  110 opt_eols: . opt_eols TK_EOL
  111         | . %empty

    $default  reduce using rule 111 (opt_eols)

    opt_eols  go to state 62


State 19

    2 statementList: statementList . opt_eols statement
    7 inputStatement: statementList .  [$end, TK_EOL]
  110 opt_eols: . opt_eols TK_EOL
  111         | . %empty  [TK_Op_mul, TK_EOL, TK_Print, TK_IF, TK_VarNombre, TK_While, TK_Refenciacion, TK_Char, TK_Int, TK_Void, TK_For, TK_Scanf, TK_Incremento, TK_Decremento, TK_Do]

    $end      reduce using rule 7 (inputStatement)
    TK_EOL    reduce using rule 7 (inputStatement)
    TK_EOL    [reduce using rule 111 (opt_eols)]
    $default  reduce using rule 111 (opt_eols)

    opt_eols  go to state 63


State 20

    4 declarationList: declarationList . opt_eols declaration_statement TK_PuntoComma
    6 inputStatement: declarationList . opt_eols statementList
  110 opt_eols: . opt_eols TK_EOL
  111         | . %empty

    $default  reduce using rule 111 (opt_eols)

    opt_eols  go to state 64


State 21

    1 inputs: opt_eols inputStatement . opt_eols
  110 opt_eols: . opt_eols TK_EOL
  111         | . %empty

    $default  reduce using rule 111 (opt_eols)

    opt_eols  go to state 65


State 22

    3 statementList: statement .

    $default  reduce using rule 3 (statementList)


State 23

   18 statement: incremente_statement . TK_PuntoComma

    TK_PuntoComma  shift, and go to state 66


State 24

   17 statement: callFuncion_statement . TK_PuntoComma

    TK_PuntoComma  shift, and go to state 67


State 25

    5 declarationList: declaration_statement . TK_PuntoComma

    TK_PuntoComma  shift, and go to state 68


State 26

   16 statement: funcion_statement .

    $default  reduce using rule 16 (statement)


State 27

   13 statement: producce_statement .

    $default  reduce using rule 13 (statement)


State 28

   30 declaration_statement: Type . TK_VarNombre TK_left_corchete expr TK_rigth_corchete optionalAssign multideclarationImput
   31                      | Type . TK_Op_mul TK_VarNombre optionalAssign multideclarationImput
   32                      | Type . TK_VarNombre optionalAssign multideclarationImput
   40 funcion_statement: Type . TK_VarNombre TK_left_par optparametroList TK_rigth_par opt_eols optionalBlock
   41                  | Type . TK_Op_mul TK_VarNombre TK_left_par optparametroList TK_rigth_par opt_eols optionalBlock

    TK_Op_mul     shift, and go to state 69
    TK_VarNombre  shift, and go to state 70


State 29

   14 statement: for_statement .

    $default  reduce using rule 14 (statement)


State 30

    8 statement: if_statement .

    $default  reduce using rule 8 (statement)


State 31

    9 statement: while_statement .

    $default  reduce using rule 9 (statement)


State 32

   15 statement: doWhile_statement . TK_PuntoComma

    TK_PuntoComma  shift, and go to state 71


State 33

   10 statement: print_statement . TK_PuntoComma

    TK_PuntoComma  shift, and go to state 72


State 34

   11 statement: scanf_statement . TK_PuntoComma

    TK_PuntoComma  shift, and go to state 73


State 35

   12 statement: assign_statement . TK_PuntoComma

    TK_PuntoComma  shift, and go to state 74


State 36

   93 assign_statement: TK_Op_mul TK_VarNombre . incrementopt opAssignStatement expr
   94 incrementopt: . TK_Incremento
   95             | . TK_Decremento
   96             | . %empty  [TK_Asignacion, TK_AutoAdd, TK_AutoSub, TK_AutoMul, TK_AutoDiv, TK_AsigOrBit, TK_AsigCorIzq, TK_AsigCorDer, TK_AsigAndBit, TK_AsigXorBit, TK_AutoMod]

    TK_Incremento  shift, and go to state 75
    TK_Decremento  shift, and go to state 76

    $default  reduce using rule 96 (incrementopt)

    incrementopt  go to state 77


State 37

   84 print_statement: TK_Print TK_left_par . TK_String TK_Comma arg_list TK_rigth_par
   85                | TK_Print TK_left_par . TK_String TK_rigth_par

    TK_String  shift, and go to state 78


State 38

   78 if_statement: TK_IF TK_left_par . expr TK_rigth_par eols BlockStatementOrStatement TK_EOL TK_Else TK_EOL BlockStatementOrStatement
   79             | TK_IF TK_left_par . expr TK_rigth_par eols BlockStatementOrStatement
  112 ternario: . conditional TK_Interogaccion expr TK_DosPuntos expr
  113         | . andOr
  114 assignExpr: . TK_VarNombre opAssign expr
  115           | . TK_VarNombre TK_left_corchete expr TK_rigth_corchete opAssign expr
  116           | . TK_Refenciacion TK_VarNombre opAssign expr
  117           | . TK_Op_mul TK_VarNombre opAssign expr
  129 expr: . assignExpr
  130     | . ternario
  131 andOr: . andOr TK_And exprForBit
  132      | . andOr TK_Or exprForBit
  133      | . exprForBit
  134 exprForBit: . exprForBit TK_OPorBit conditional
  135           | . exprForBit TK_ExclPorBit conditional
  136           | . exprForBit TK_Refenciacion conditional
  137           | . conditional
  138 conditional: . conditional TK_Igual corrimiento
  139            | . conditional TK_Distinto corrimiento
  140            | . conditional TK_Menor corrimiento
  141            | . conditional TK_Mayor corrimiento
  142            | . conditional TK_MenorIgual corrimiento
  143            | . conditional TK_MayorIgual corrimiento
  144            | . corrimiento
  145 corrimiento: . corrimiento TK_CorrimientoIzq add
  146            | . corrimiento TK_CorrimientoDer add
  147            | . add
  148 add: . add TK_Op_add term
  149    | . add TK_Op_sub term
  150    | . term
  151 term: . term TK_Op_mul unary
  152     | . term TK_Op_div unary
  153     | . term TK_Modulo unary
  154     | . unary
  155 unary: . TK_Negarcion expr
  156      | . TK_Complemento expr
  157      | . TK_Op_mul TK_VarNombre
  158      | . TK_Op_mul TK_left_par TK_VarNombre TK_rigth_par
  159      | . TK_Refenciacion TK_VarNombre
  160      | . TK_Refenciacion TK_left_par TK_VarNombre TK_rigth_par
  161      | . TK_Incremento TK_VarNombre
  162      | . TK_Incremento TK_left_par TK_VarNombre TK_rigth_par
  163      | . TK_Decremento TK_VarNombre
  164      | . TK_Decremento TK_left_par TK_VarNombre TK_rigth_par
  165      | . TK_VarNombre TK_Incremento
  166      | . TK_left_par TK_VarNombre TK_rigth_par TK_Incremento
  167      | . TK_VarNombre TK_Decremento
  168      | . TK_left_par TK_VarNombre TK_rigth_par TK_Decremento
  169      | . factor
  170 factor: . TK_VarNombre
  171       | . TK_VarNombre TK_left_par optionalParameter TK_rigth_par
  172       | . TK_NUMERO
  173       | . TK_CharLit
  174       | . TK_VarNombre TK_left_corchete expr TK_rigth_corchete
  175       | . TK_left_par expr TK_rigth_par

    TK_Op_mul        shift, and go to state 79
    TK_left_par      shift, and go to state 80
    TK_NUMERO        shift, and go to state 81
    TK_VarNombre     shift, and go to state 82
    TK_Refenciacion  shift, and go to state 83
    TK_CharLit       shift, and go to state 84
    TK_Incremento    shift, and go to state 85
    TK_Decremento    shift, and go to state 86
    TK_Negarcion     shift, and go to state 87
    TK_Complemento   shift, and go to state 88
